make task configs to deepcopy, also update the tests