@@ -19,7 +19,6 @@ package org.apache.kafka.coordinator.group.streams.assignor;
 import org.apache.kafka.coordinator.group.api.streams.assignor.MemberAssignmentMetadata;
 import org.apache.kafka.coordinator.group.api.streams.assignor.MemberAssignmentState;
 
-import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
@@ -56,24 +55,24 @@ public record MemberMetadataAndStateImpl(
         Objects.requireNonNull(instanceId);
         Objects.requireNonNull(rackId);
         Objects.requireNonNull(processId);
-        clientTags = Collections.unmodifiableMap(Objects.requireNonNull(clientTags));
+        clientTags = Map.copyOf(Objects.requireNonNull(clientTags));
         // These collections belong to the coordinator (the member's current assignment and the offsets reported in
-        // the last heartbeat) and are only unmodifiable at the outer level there, so wrap the nested ones as well.
-        activeTasks = unmodifiableTasks(activeTasks);
-        standbyTasks = unmodifiableTasks(standbyTasks);
-        warmupTasks = unmodifiableTasks(warmupTasks);
-        taskOffsets = unmodifiableOffsets(taskOffsets);
-        taskEndOffsets = unmodifiableOffsets(taskEndOffsets);
+        // the last heartbeat), so deep-copy them: what the assignor sees is a snapshot it cannot reach through.
+        activeTasks = deepCopyTasks(activeTasks);
+        standbyTasks = deepCopyTasks(standbyTasks);
+        warmupTasks = deepCopyTasks(warmupTasks);
+        taskOffsets = deepCopyOffsets(taskOffsets);
+        taskEndOffsets = deepCopyOffsets(taskEndOffsets);
     }
 
-    private static Map<String, Set<Integer>> unmodifiableTasks(Map<String, Set<Integer>> tasks) {
+    private static Map<String, Set<Integer>> deepCopyTasks(Map<String, Set<Integer>> tasks) {
         return Objects.requireNonNull(tasks).entrySet().stream()
-            .collect(Collectors.toUnmodifiableMap(Map.Entry::getKey, entry -> Collections.unmodifiableSet(entry.getValue())));
+            .collect(Collectors.toUnmodifiableMap(Map.Entry::getKey, entry -> Set.copyOf(entry.getValue())));
     }
 
-    private static Map<String, Map<Integer, Long>> unmodifiableOffsets(Map<String, Map<Integer, Long>> offsets) {
+    private static Map<String, Map<Integer, Long>> deepCopyOffsets(Map<String, Map<Integer, Long>> offsets) {
         return Objects.requireNonNull(offsets).entrySet().stream()
-            .collect(Collectors.toUnmodifiableMap(Map.Entry::getKey, entry -> Collections.unmodifiableMap(entry.getValue())));
+            .collect(Collectors.toUnmodifiableMap(Map.Entry::getKey, entry -> Map.copyOf(entry.getValue())));
     }
 
 }
